name:                typed-protocols
version:             0.1.0.0
synopsis:            A framework for strongly typed protocols
-- description:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2021 The-Blockchain-Company
author:              Alexander Vieth, rmourey_jr Coutts, Marcin Szamotulski
maintainer:          alex@well-typed.com, duncan@well-typed.com, marcin.szamotulski@tbco.io
category:            Control
build-type:          Simple

-- These should probably be added at some point.
-- extra-source-files:  ChangeLog.md, README.md

cabal-version:       >=1.10

library
  exposed-modules:   Network.TypedProtocol
                   , Network.TypedProtocol.Core
                   , Network.TypedProtocol.Pipelined
                   , Network.TypedProtocol.Driver
                   , Network.TypedProtocol.Proofs

  other-extensions:  GADTs
                   , RankNTypes
                   , PolyKinds
                   , DataKinds
                   , ScopedTypeVariables
                   , TypeFamilies
                   , TypeOperators
                   , BangPatterns
  build-depends:     base,
                     io-classes

  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wno-unticked-promoted-constructors
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wpartial-fields
                     -Widentities
                     -Wredundant-constraints
