cabal-version:      2.4
name:               unsoundswitch
version:            0.1.0.0
author:             TBCO Engineering Team
maintainer:         operations@blockchain-company.io

executable unsoundswitch
    main-is:          UnsoundSwitch.hs
    build-depends:    base ^>=4.14.1.0
                    , logfloat
                    , statistics
    default-language: Haskell2010
    ghc-options:      -Wall
